# mh

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-ios.sh  ent.xml
doc/: define.js
include/: editline  histedit.h  readline
scripts/: iap-search-sku.js
src/app/: app.h  args.c  config.h  context.c  main.c  misc.h  script-main.c  scripts.c  scripts.h
src/app/commands/: commands.h  help.c  memory.c  open.c  process.c  script.c  search.c  utils.c
src/app/misc/: jailbreak.c
src/app/scripts/: memory.c  object.c  result.c  script-common.c  script-common.h  script-functions.h  search.c  utils.c
src/mh/: mh.c  mh.h  result.c  search.c  search.h  utils.c  utils.h
tests/: CMakeLists.txt  ent.xml  test-argv.c  test-byte2hex.c  test-duktape-line-scripts.c  test-dyld-info.c  test-editline.c  test-hex2byte.c  test-linenoise-app.c  test-list.c  test-memory-dump.c  test-memory-search.c  test-memory-write.c  test-process-list.c  test-readline.c  test-script-object.js  test-script.js  test-slist.c  test-string-search.c  test-tailq.c  test-vm-region-recurse.c  test-vm-region.c  test-vm-segments.c  test-wordexp.c
tools/: download_sdks.sh  duktape_prepare.sh  jtool  ldid2
